fix(dropdown): increase z-index of open dropdown, v1.63.3

--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -22,4 +22,5 @@
 	visibility: visible;
 	opacity: 1;
 	pointer-events: auto;
+	z-index: 2;
 }
